--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
+    "vue-gun": "^0.0.3",
     "vue-router": "^3.0.1",
+    "vuejs-spreadsheet": "^1.6.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
